<resources>
    <string name="app_name" translatable="false">UHIS</string>
    <string name="logo_description">Medtronic Logo</string>
    <string name="welcome">Welcome</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="email">Username / Email / Phone No</string>
    <string name="password">Password</string>
    <string name="email_place_holder">Enter Username / Email / Phone No</string>
    <string name="password_place_holder">Enter Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="hide">Hide</string>
    <string name="email_cannot_be_empty">Please enter username / email / phone number.</string>
    <string name="password_cannot_be_empty">Please enter password.</string>
    <string name="email_phone_invalid">Please enter a valid username/email/phone number.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="logout">LOGOUT</string>
    <string name="home">HOME</string>
    <string name="home_title">Home</string>
    <string name="app_version">Application Version</string>
    <string name="profile">PROFILE</string>
    <string name="privacy_policy">PRIVACY POLICY</string>
    <string name="offline_sync">OFFLINE SYNC</string>
    <string name="community_health_worker">Community Health Worker</string>
    <string name="chw">CHW</string>
    <string name="households">Households</string>
    <string name="search">Search</string>
    <string name="search_name_patient_id">Search by Name / Patient ID</string>
    <string name="add_household">Add Household</string>
    <string name="household_no">Household No</string>
    <string name="no_of_people">No of people</string>
    <string name="members_registered">Members Registered</string>
    <string name="filters">Filters</string>
    <string name="people_registered">%1$d/%2$d</string>
    <string name="investigation">Investigation</string>
    <string name="investigation_caps">INVESTIGATION</string>
    <string name="prescription">Prescription</string>
    <string name="prescription_caps">PRESCRIPTION</string>
    <string name="counselling_caps">COUNSELLING</string>
    <string name="counselling">Counselling</string>
    <string name="submit_caps">SUBMIT</string>
    <string name="household_name_no">Household Name / No</string>
    <string name="diagnoses">Diagnoses</string>
    <string name="confirm_diagnoses">Confirm Diagnoses</string>
    <string name="confirm_diagnosis">Confirm Diagnosis</string>
    <string name="edit_diagnosis">Edit Diagnoses</string>
    <string name="patient_status">Patient Status</string>
    <string name="child_status">Child Status</string>
    <string name="referred">Referred</string>
    <string name="edit_diagnoses">Edit Diagnoses</string>
    <string name="edit_status">Edit Status</string>
    <string name="patient_category">Patient Category</string>
    <string name="general">General</string>
    <string name="edit_category">Edit Category</string>
    <string name="presenting_complaints">Presenting Complaints</string>
    <string name="type_notes">Type your notes</string>
    <string name="clinical_notes">Clinical Notes</string>
    <string name="systemic_examinations">Systemic Examinations</string>
    <string name="other">Other</string>
    <string name="none">None</string>
    <string name="assessment">Assessment</string>
    <string name="assessments">Assessments</string>
    <string name="household_members">Household Members</string>
    <string name="finish_registration">FINISH REGISTRATION</string>
    <string name="add_new_member">ADD NEW MEMBER</string>
    <string name="household_details">Household Details</string>
    <string name="house_no">House No</string>
    <string name="village">Village</string>
    <string name="household_location">Household Location</string>
    <string name="landmark">Landmark</string>
    <string name="hh_mobile_number">Household Head Mobile Number</string>
    <string name="household_summary_member_info">%1$s - %2$s - %3$s</string>
    <string name="patient_medical_review">Patient Medical Review</string>
    <string name="sugar_append" translatable="false">%1$.0f mmHg</string>
    <string name="pulse_append" translatable="false">%1$.0f BPM</string>
    <string name="dateofbirth">Date of Birth</string>
    <string name="age_in_years">Age (in years)</string>
    <string name="dd_mm_yyyy" translatable="false">DD/MM/YYYY</string>
    <string name="please_select">--Select--</string>
    <string name="enter_the_age">Enter the Age</string>
    <string name="enter_the_value">Enter the value</string>
    <string name="confirm">Confirm</string>
    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
    <string name="skip">SKIP</string>
    <string name="hr">Hrs</string>
    <string name="min">Mins</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="pulse">Pulse(BPM)</string>
    <string name="don_t_have_id_generate_id">Don\'t have ID? Generate ID</string>
    <string name="separator_hyphen" translatable="false">-</string>
    <string name="separator_double_hyphen" translatable="false">--</string>
    <string name="separator_colon" translatable="false">:</string>
    <string name="hyphen_symbol" translatable="false">-</string>
    <string name="hash_symbol" translatable="false">#</string>
    <string name="next">Next</string>
    <string name="default_user_input_error">Please enter a valid value</string>
    <string name="arrow_back">back</string>
    <string name="more">More</string>
    <string name="arrow_home">home</string>
    <string name="red_alert">(Red Alert)</string>
    <string name="scroll_view">Scroll View</string>
    <string name="household_registration">Household Registration</string>
    <string name="household_head_registration">Household Head Registration</string>
    <string name="household_head_name">Household Head Name</string>
    <string name="household_family">%1$s\'s Family</string>
    <string name="cancel">Cancel</string>
    <string name="member_registration">Member Registration</string>
    <string name="external_member_registration">External Member Registration</string>
    <string name="submit">Submit</string>
    <string name="start_screening">Start Screening</string>
    <string name="start_assessment">Services</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="years">Years</string>
    <string name="months">Months</string>
    <string name="weeks">Weeks</string>
    <string name="days">Days</string>
    <string name="age">Age</string>
    <string name="seperator_hyphen" translatable="false">-</string>
    <string name="household_empty_text">No Household found.</string>
    <string name="household_name_or_no">Name / No / National ID or BRN / Phone</string>
    <string name="member_name_or_phone">Member Name / National ID or BRN / Phone</string>
    <string name="add_external_member">Add External Member</string>
    <string name="member_deceased">Member Deceased</string>
    <string name="male_prefix">M</string>
    <string name="female_prefix">F</string>
    <string name="gender_other_prefix" translatable="false">O</string>
    <string name="iccm">ICCM</string>
    <string name="rmnch">RMNCH</string>
    <string name="tb">TB</string>
    <string name="national_id">National ID</string>
    <string name="brn">BRN</string>
    <string name="bio_data">Bio Data</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="no_of_months">%1$s Months</string>
    <string name="no_of_weeks">%1$s Weeks</string>
    <string name="no_of_years">%1$s Years</string>
    <string name="result">Result</string>
    <string name="patient_s_summary_could_not_be_fetched">Patient\'s Summary Could not be fetched</string>
    <string name="referred_for_further_assessment">Referred for Further Assessment</string>
    <string name="done">Done</string>
    <string name="general_danger_signs">General Danger Signs</string>
    <string name="muac">MUAC</string>
    <string name="cough">Cough</string>
    <string name="fever">Fever</string>
    <string name="breathing_rate">Breathing Rate</string>
    <string name="dispensed">Dispensed</string>
    <string name="rdt_test">RDT Test</string>
    <string name="diarrhoea">Diarrhoea</string>
    <string name="signs">Signs</string>
    <string name="label">Label</string>
    <string name="write_your_observation">Write your observation</string>
    <string name="notes">Notes</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="phu_referred_to">Nearest PHU Referred to</string>
    <string name="phu">PHU</string>
    <string name="was_the_child">Was the child actually taken to the Clinic ?</string>
    <string name="next_follow_up_date">Next visit date</string>
    <string name="presumptive_tb_no">Presumptive TB No</string>
    <string name="tb_signs_symptoms"><![CDATA[TB Signs & Symptoms]]></string>
    <string name="symptoms">Symptoms</string>
    <string name="no_symptom_selected">No Symptoms Selected</string>
    <string name="symptoms_selected">Symptoms Selected</string>
    <string name="complications_selected">Complications Selected</string>
    <string name="conditions_selected">Conditions Selected</string>
    <string name="no_s">No %s</string>
    <string name="select_symptoms">Select Symptoms</string>
    <string name="ok">OK</string>
    <string name="no_internet_error">Please check your internet connectivity.</string>
    <string name="incorrect_username_password">Incorrect email or password</string>
    <string name="close">Close</string>
    <string name="error">Error</string>
    <string name="alert">Alert</string>
    <string name="retry">Retry</string>
    <string name="session_expired">Session Expired! Please login again.</string>
    <string name="offline_login_message">You does not have internet to connect our system. Though you can login offline for offline features. Do you wish to continue?</string>
    <string name="role">Role</string>
    <string name="email_cap">Email</string>
    <string name="username">Username</string>
    <string name="phone_no">Phone No</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="type_your_comments">Type your comments</string>
    <string name="diabetes">Diabetes</string>
    <string name="hypertension">Hypertension</string>
    <string name="new_or_worsening_symptoms">Any new or worsening symptoms</string>
    <string name="error_message_spinner">Please select a valid option</string>
    <string name="please_enter_details">"Please enter a valid value for"</string>
    <string name="registration_date">Registration Date</string>
    <string name="customize">Customize</string>
    <string name="this_week">This Week</string>
    <string name="this_month">This Month</string>
    <string name="dd_mmm_yyyy">dd_mm_yyyy</string>
    <string name="enter" translatable="false">Enter</string>
    <string name="scan_qr">Scan QR Code</string>
    <string name="scan_new_qr">Scan New QR Code?</string>
    <string name="linking_qr_code_is_mandatory">Linking QR code is mandatory</string>
    <string name="symptoms_adherence">Symptoms &amp; Adherence</string>
    <string name="worsening_symptoms">Has the patient had any new or worsening symptoms?</string>
    <string name="taking_medication">Are you taking medication regularly?</string>
    <string name="taken_medication">In last 30 days how many days you have taken medicines?</string>
    <string name="new_ncd">Is there a development of new NCD?</string>
    <string name="health_condition">Health Condition</string>
    <string name="both_lower_case">Both</string>
</resources>