<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvHealthCondition"
        style="@style/TextStyle_Medium_16_NoBG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/health_condition"
        android:textColor="@color/b_w_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/healthConditionChipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_2sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHealthCondition"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/hypertensionChip"
            style="@style/ChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hypertension" />

        <com.google.android.material.chip.Chip
            android:id="@+id/diabetesChip"
            style="@style/ChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diabetes" />

        <com.google.android.material.chip.Chip
            android:id="@+id/bothChip"
            style="@style/ChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/both_lower_case" />

    </com.google.android.material.chip.ChipGroup>

</androidx.constraintlayout.widget.ConstraintLayout>
